# space_collector

./: Lancement.txt  README.md  adapter_la_strategie_en_fonction_des_adversaire.c  attaque.c  collecte de planète.c  fire.c  gestion_du_temps.c  move.c  radar.c  réparer_les_vaisseau_cassé.c
space_collector/: platformio.ini
space_collector-main/: .pre-commit-config.yaml  README.md  competition.sh  pyproject.toml
space_collector-main/.github/workflows/: pre-commit-autoupdate.yml  pre-commit.yml
space_collector/include/: main.h  stm32f4xx_it.h
space_collector/include/Plane/: Plane.h
space_collector/include/StructH/: struct.h
space_collector/src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
space_collector/src/PlaneV/: plane.c
space_collector/src/Struct/: struct.c
