[project]
name = "space_collector"
version = "0.0.7"
description = "Description"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
authors = [{ name = "Vincent Poulailleau", email = "vpoulailleau@gmail.com" }]
readme = "README.md"
keywords = ["space", "collector", "game"]
license = { text = "BSD-3-Clause" }
requires-python = ">=3.10"
dependencies = ["arcade==2.6.17", "pyserial==3.5"]
# dependencies = [
#     "arcade @ git+https://github.com/pythonarcade/arcade.git@development",
# ]

[project.optional-dependencies]
dev = [
    "build",
    "pytest",
    "pytest-cov",
    "python-dev-tools >= 2023",
    "pre-commit >=3,<4",
    "pyinstrument",
    "twine",
]

[project.urls]
"Source code" = "https://github.com/vpoulailleau/space_collector"
Repository = "https://github.com/vpoulailleau/space_collector"
Documentation = "https://github.com/vpoulailleau/space_collector/README.md"

[tool.setuptools.packages.find]
include = ["space_collector*"]

[tool.bandit.assert_used]
skips = ["*_test.py", "*test_*.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.flake8]
no-accept-encodings = true
max-line-length = 88
extend-ignore = ["AAA05", "ANN101", "ANN102", "PLC116", "SCS108"]

[tool.interrogate]
fail-under = 100
verbose = 2
ignore-init-module = true
ignore-regex = ["^test_.*$"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q  -s -vv --cov=space_collector.game --cov-branch --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
# Enable D400 on top of the Google convention for docstrings.
extend-select = ["D400"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
